package com.mdgriffin.distributedcomputingproject.common;

public enum Request {
    LOGIN,
    LOGOFF,
    UPLOAD,
    DOWNLOAD,
    LIST;
}
