package com.mdgriffin.distributedcomputingproject.server;

import java.io.IOException;

public interface Server {
    void listen() throws Exception;
}
