@startuml
package common {

class SocketHelper
class DTLSSocket

interface FileSystem {
    +saveFile(String path, byte[] data)
    +readFile(String path):byte[]
    +deleteFile (String path):boolean
    +createDirectory(String path):boolean
    +deleteDirectory (String path):boolean
    +listDirectory (String path):List<FileDescription>
    +listDirectory (String path, boolean includeDirectories):List<FileDescription>
    +directoryExists (String path):boolean
    +fileExists (String path):boolean
}

enum Request {
    LOGIN,
    LOGOFF,
    UPLOAD,
    DOWNLOAD,
    LIST
}

enum Response {
    SUCCESS,
    ERROR,
    DENIED,
    NOT_FOUND
}

class PackageSegmenter {
    PackageSegmenter(packet:byte[], packetSize:int)
    int getNumPackets
}

class Message {
    + toJson():String
    # fromJSon(Message):void
    +getRequest():Request
    +getResponse():Response
    +getBody():String
    +getHeader():List<KeyValue>
}

class KeyValue {
    +getKey():String
    +getValue():String
}

Message --* Request
Message --* Response
Message --* KeyValue

SocketHelper --o PackageSegmenter

interface Iterator {
    boolean hasNext
    byte[] next
}

PackageSegmenter --|> Iterator

}

package server {

interface Server {
    listen()
}

class DTLSServer {
    Server(RequestHandler)
}

interface RequestHandler {
    +login(Message message):Message
    +ist (Message message):Message
    +upload (Message message):Message
    +download (Message message):Message
    +logoff (Message message):Message
}

interface Session {
    +getId ():String
    +getExpiry ():Date
    +getUsername():String
}

interface Authentication {
    isValidUser (String username, String password):boolean
    hasActiveSession (String username, String sessionId):boolean
    sessionIsActive (String sessionId):boolean
    getActiveSession(String sessionId):Session
    login (String username, String password):Session
    logoff (String username):boolean
    getSessions ():Map<String, Session>
}

class RequestHandlerImpl

RequestHandlerImpl ..|> RequestHandler
RequestHandlerImpl ..o Message

DTLSServer --o RequestHandler
DTLSServer --o Server
DTLSServer --o DTLSSocket

RequestHandlerImpl --o FileSystem
RequestHandlerImpl --o Authentication
RequestHandlerImpl --o ListAuthentication

ListAuthentication ..|> Authentication

ListAuthentication --* Session

RequestHandlerImpl --o SocketHelper
}
@enduml